# qbittorrent-remote-client

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  cleanup_missing_files.sh  codecov.yml  config.example.json  examples.py  pyproject.toml  qbt_api.py  qbt_client.py  requirements-dev.txt  requirements.txt  setup.py  setup.sh  test_connection.py  tox.ini
.github/workflows/: auto-format.yml  ci-cd.yml
qbittorrent_remote_client/: __init__.py  qbt_client.py
tests/: conftest.py  test_qbt_api.py  test_qbt_client.py
