[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbittorrent-remote-client"
version = "0.2.0"
authors = [{ name = "rlong", email = "rlong@example.com" }]
description = "A Python-based command-line tool for remotely managing qBittorrent instances via the Web API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["qbittorrent", "torrent", "remote", "cli", "automation"]
dependencies = ["click>=8.0.0", "requests>=2.25.0", "rich>=10.0.0"]

[project.urls]
Homepage = "https://github.com/ryanlong1004/qbittorrent-remote-client"
Repository = "https://github.com/ryanlong1004/qbittorrent-remote-client"
Issues = "https://github.com/ryanlong1004/qbittorrent-remote-client/issues"

[project.scripts]
qbt-client = "qbittorrent_remote_client:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-mock>=3.6",
    "requests-mock>=1.9",
    "black>=22.0",
    "flake8>=4.0",
    "pylint>=2.12",
    "isort>=5.10",
    "mypy>=0.950",
    "bandit>=1.7",
    "pre-commit>=2.15",
    "tox>=3.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["qbittorrent_remote_client*"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]

[tool.pylint]
max-line-length = 120
max-args = 10
max-attributes = 10
max-branches = 20

[tool.pylint.messages_control]
disable = [
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-positional-arguments",
    "too-many-locals",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --strict-markers --strict-config --cov=qbittorrent_remote_client --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
